# ChangeLog for gnome-base/gnome-core
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/Attic/ChangeLog,v 1.8 2002/06/04 00:29:08 blocke Exp $

*gnome-core-1.4.0.8 (29 Apr 2002)

  03 Jun 2002; Bruce A. Locke <blocke@shivan.org> gnome-core-1.4.0.8.ebuild :

  Quick Gnome2 dual-install dep fix

*gnome-core-1.4.0.7 (23 Apr 2002)
  23 Apr 2002; Spider <spider@gentoo.org> gnome-core-1.4.0.7.ebuild :
  Create a patch to fix a png link configure problem
  update to new version of gnome-core
'
*gnome-core-1.4.0.6-r5 (4 Apr 2002)

  4 Apr 2002; M.Schlemmer <azarah@gentoo.org> gnome-core-1.4.0.6-r5.ebuild :

  Resolve bug #382.

*gnome-core-1.4.0.6-r4 (24 Mar 2002)

  24 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gnome-core-1.4.0.6-r4.ebuild :

  Man page placement/LFH compliance submitted by Matthew Kennedy.

*gnome-core-1.4.0.6-r3 (18 Mar 2002)

  18 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gnome-core-1.4.0.6-r3.ebuild :

  Added gnome-print as a dependency.

*gnome-core-1.4.0.6-r2 (10 Mar 2002)

  10 Mar 2002; Bruce A. Locke <blocke@shivan.org> gnome-core-1.4.0.6-r2.ebuild :

  NLS fixes submitted by seemant@rocketmail.com (Seemant Kulleen)

