@@ -1,12 +1,13 @@
 # ChangeLog for gnome-base/gnome-core
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/Attic/ChangeLog,v 1.8 2002/06/04 00:29:08 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-core/Attic/ChangeLog,v 1.9 2002/06/28 09:13:22 spider Exp $
 
 *gnome-core-1.4.0.8 (29 Apr 2002)
 
   03 Jun 2002; Bruce A. Locke <blocke@shivan.org> gnome-core-1.4.0.8.ebuild :
 
   Quick Gnome2 dual-install dep fix
+  adding a block on gnome-desktop as well
 
 *gnome-core-1.4.0.7 (23 Apr 2002)
   23 Apr 2002; Spider <spider@gentoo.org> gnome-core-1.4.0.7.ebuild :
